Changed all Is to Wes

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,8 +4,7 @@
             <div class="row">
                 <div class="col-lg-offset-2 col-lg-8 text-center">
                     <h1 class="section-heading">Services</h1>
-                    <h3 class="section-subheading text-muted">If you're looking for a consultancy with a deep understanding of the gaming and mobile markets coupled with creativity, grit and passion, you're at the right place.</h3>
-                    <h3 class="section-subheading text-muted">Our range of services caters to everyone from AAA studios to solo indie developers. Our data-driven approach deliver KPI-validated ROI at all stage of your business cycle, from CPI and CPA to LTV and ROAS.</h3>
+                    <h3 class="section-subheading text-muted">If you're looking for a consultancy with a deep understanding of the gaming and mobile markets coupled with creativity, grit and passion, you're at the right place.<br />Our range of services caters to everyone from AAA studios to solo indie developers. Our data-driven approach deliver KPI-validated ROI at all stage of your business cycle, from CPI and CPA to LTV and ROAS.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -15,7 +14,7 @@
                       <i class="fas fa-rocket fa-inverse" data-fa-transform="shrink-9"></i>
                   </span>
                     <h4 class="service-heading">Launch Strategy</h4>
-                    <p class="text-muted">I will plan and execute a comprehensive strategy for getting your game to market.</p>
+                    <p class="text-muted">We will plan and execute a comprehensive strategy for getting your game to market.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -23,7 +22,7 @@
                         <i class="fas fa-user-plus fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">User Acquisition</h4>
-                    <p class="text-muted">I will grow your game's user base at scale, with a ROI-driven approach to match your core KPIs.</p>
+                    <p class="text-muted">We will grow your game's user base at scale, with a ROI-driven approach to match your core KPIs.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -31,7 +30,7 @@
                         <i class="fab fa-apple fa-inverse" data-fa-transform="shrink-7"></i>
                     </span>
                     <h4 class="service-heading">App Store Optimisation</h4>
-                    <p class="text-muted">I will analyse your game's store listing and provide actionable recommendations to increase conversion rate and discoverability.</p>
+                    <p class="text-muted">We will analyse your game's store listing and provide actionable recommendations to increase conversion rate and discoverability.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -39,7 +38,7 @@
                         <i class="fas fa-money-bill-alt fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">Product and Monetisation</h4>
-                    <p class="text-muted">I will review and optimise your IAP or ad-based monetisation. Even if it means I have to integrate SDKs myself.</p>
+                    <p class="text-muted">We will review and optimise your IAP or ad-based monetisation. Even if it means we have to integrate SDKs ourselves.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -47,7 +46,7 @@
                         <i class="fas fa-gamepad fa-inverse" data-fa-transform="shrink-9"></i>
                     </span>
                     <h4 class="service-heading">Game Analytics and UX</h4>
-                    <p class="text-muted">I will fix your acquisition and onboarding funnels. Yes, they are leaking. No, you don't know where yet.</p>
+                    <p class="text-muted">We will fix your acquisition and onboarding funnels. Yes, they are leaking. No, you don't know where yet.</p>
                 </div>
                 <div class="col-md-4 fa-8x">
                     <span class="fa-layers fa-fw">
@@ -55,7 +54,7 @@
                         <i class="fab fa-weixin fa-inverse" data-fa-transform="shrink-8"></i>
                     </span>
                     <h4 class="service-heading">Consulting on China</h4>
-                    <p class="text-muted">I will provide you with guidance to navigate the Chinese mobile market and operate your business there with the right partners.</p>
+                    <p class="text-muted">We will provide you with guidance to navigate the Chinese mobile market and operate your business there with the right partners.</p>
                 </div>
             </div>
         </div>
