--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h1 class="section-heading">Portfolio</h1>
-                    <h3 class="section-subheading text-muted">Studios and publishers that trust me with marketing their games:</h3>
+                    <h3 class="section-subheading text-muted">Studios and publishers that trust us with marketing their games:</h3>
                 </div>
             </div>
             <div class="row">
