Changed intro text

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">
-                  Hi, we're {{site.title}}.
+                  Hi, welcome to {{site.title}}.
                 </div>
                 <div class="intro-heading">We can help your mobile apps and games find their audience.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Show me what you can do</a>
