--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -664,6 +664,7 @@ section#contact {
     background-image: url('{{ site.baseurl }}/img/earth-image.jpg');
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 section#contact .section-heading {
